[gd_scene format=3 uid="uid://cnkhjf8aiwjcf"]

[ext_resource type="Script" uid="uid://bgy45i2j3wyyd" path="res://scripts/player/player_corner.gd" id="1_4sc2x"]
[ext_resource type="Texture2D" uid="uid://i7pol7hsr0kt" path="res://art/kenney_input_prompts/flair_circle_8.svg" id="1_xy7cb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4sc2x"]
radius = 31.0

[sub_resource type="Animation" id="Animation_xy7cb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4sc2x"]
resource_name = "rotate_circle"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_px6vn"]
_data = {
&"RESET": SubResource("Animation_xy7cb"),
&"rotate_circle": SubResource("Animation_4sc2x")
}

[node name="PlayerCorner" type="Area2D" unique_id=948098482 groups=["PlayerCorner"]]
modulate = Color(0.8862615, 0.8862615, 0.88626134, 1)
scale = Vector2(2, 2)
script = ExtResource("1_4sc2x")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1496261131]
scale = Vector2(0.2578125, 0.17382813)
texture = ExtResource("1_xy7cb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=474669468]
shape = SubResource("CircleShape2D_4sc2x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=741619799]
libraries/ = SubResource("AnimationLibrary_px6vn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
